# data-recorder-backend

./: .gitignore  .gitmodules  QUICK_FIX.md  README.md  TESTING_GUIDE.md  install_build_tools.ps1  ipc_design.md  project_to_md.py  quick_test.ps1  rustup toolchain install stable-x86_64-pc-windows-gnurustup toolchain install stable-x86_64-pc-windows-gnu  test_system.ps1  tester.html  updated_webpage.html
data-processor/: .env  .env.example  Cargo.toml  README.md  start_app.bat
data-processor/src/: config.rs  data_processing.rs  device_communication.rs  file_manager.rs  ipc.rs  main.rs  web_server.rs  websocket.rs
data-reader/: .gitignore  Makefile  README.md  ipc_communication.c  ipc_communication.h  serialread.c  shared_memory.c  shared_memory.h
doc/: api_doc.md  project_source_code.md  protocol_doc.md
html/: api-test.html  dashboard.html  dashboardv2.html  dashboardv3.html  dashboardv4.html  dashboardv5.html  fixed_webpage.html  nilm_v4_dashboard.html  nilm_v4_dashboardv2.html  schneider_dashboard.html  schneider_dashboard_light.html  tester.html  updated_webpage.html
html/test/: doubao-test.html  grok-test.html  qwen-test.html  qwen3-coder-test.html
scripts/: api-test.py
test-sender/: Makefile  README.md  config.h  device_simulator.c  device_simulator.h  main.c  mcu_hal.h  platform_abstraction.c  sample_data.csv  test-sender.c
