[package]
name = "data-processor"
version = "0.1.0"
edition = "2021"
authors = ["Data Recorder Backend"]
description = "Data processing service for signal acquisition system"

[dependencies]
# Web server and HTTP
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1.0"

# WebSocket support
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Shared memory and IPC
shared_memory = "0.12"
mio = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
async-trait = "0.1"

# Signal processing (for future data processing)
rustfft = "6.0"

# File handling
tempfile = "3.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "handleapi", "synchapi", "memoryapi"] }
