[package]
name = "data-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# 串口通信
tokio-serial = "5.4"

# 网络和WebSocket
tokio-tungstenite = "0.20"
futures-util = "0.3"

# HTTP服务器
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 字节处理
bytes = "1.5"
data-encoding = "2.5"

# 错误处理
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID生成
uuid = { version = "1.6", features = ["v4"] }

# Windows特定依赖
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
] }

# 文件路径处理
pathdiff = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true